# hometask-30-2

./: README.md  materials_tables.xlsx  pyproject.toml  requirements.txt  ~$materials_tables.xlsx
config/: settings.py
materials/: filters.py  models.py  serializers.py  urls.py  views.py
materials/fixtures/: course_lessons_fixture.json
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/fixtures/: payment_fixture.json  users_fixture.json
users/migrations/: 0002_payment.py
